--- a/css/style_about.css
+++ b/css/style_about.css
@@ -1,4 +1,4 @@
- 
+
 .container{
   margin: 0 auto;
     max-width: 1280px;
@@ -92,15 +92,15 @@
   font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 240px;
+  margin-left: 420px;
   margin-top: 330px;
 }
 .world_main_en{
   color:white;
   font-style: italic;
   position:absolute;
-  font-size: 34pt;
-  margin-left: 120px;
+  font-size: 24pt;
+  margin-left: 475px;
   margin-top: 400px;
 }
 #indexSlides_2{
@@ -135,6 +135,8 @@
     max-height: 80px;
     width:100%;
 }
+a div, p, .text_1, .text_2, .text_3, .text_4 { transition: all .5s ease-in-out; }
+a div:hover, p:hover, .text_1:hover, .text_2:hover, .text_3:hover, .text_4:hover { color:gray; transform: scale(1.1); }
 #indexSlides_3{
   margin: 0 auto;
   background-image: url("../image/about_bg.jpg");
@@ -165,6 +167,7 @@
 }
 .text_1{
   position: absolute;
+  z-index : 2;
   margin-left: 417px;
   margin-top: 230px;
   font-size: 14pt;
@@ -198,6 +201,7 @@
   background-size: 984px 245px;
 }
 .text_2{
+    z-index : 2;
   position: absolute;
   margin-left: 167px;
   margin-top: 470px;
@@ -232,6 +236,7 @@
   background-size: 984px 245px;
 }
 .text_3{
+    z-index : 2;
   position: absolute;
   margin-left: 417px;
   margin-top: 720px;
@@ -266,6 +271,7 @@
   background-size: 984px 245px;
 }
 .text_4{
+    z-index : 2;
   position: absolute;
   margin-left: 180px;
   margin-top: 960px;
@@ -307,3 +313,64 @@
   background-size: 315px 165px;
   background-repeat:no-repeat;
 }
+.pic_4:hover,
+.pic_4:focus {
+  -webkit-animation-name: spaceboots;
+  -webkit-animation-duration: 0.8s;
+  -webkit-transform-origin:50% 50%;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+
+  @-webkit-keyframes spaceboots {
+  	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+  	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+  	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+  	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+  	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+  	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+  	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+  	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+  	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+  	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+  	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  #foother_slides{
+    margin: 0 auto;
+    background-image: url("../image/footer_bg.jpg");
+    width: 100%;
+    height: 200px;
+    background-size: 100% 200px;
+    background-repeat:no-repeat;
+  }
+  .footer_map{
+
+    position: absolute;
+    background-image: url("../image/footer_pic.jpg");
+    margin-left: 215px;
+    margin-top: 22.5px;
+    z-index: 3;
+    width: 305px;
+    height: 155px;
+    background-size: 305px 155px;
+    background-repeat:no-repeat;
+  }
+  .footer_bg_white{
+    position: absolute;
+    background-image: url("../image/footer_pic2.png");
+    margin-left: 210px;
+    margin-top: 17.5px;
+    width: 315px;
+    height: 165px;
+    background-size: 315px 165px;
+    background-repeat:no-repeat;
+  }
+
+  .footer_label{
+    color:white;
+    position:absolute;
+    font-size: 13pt;
+    margin-left: 595px;
+    margin-top: 17.5px;
+    font-family:DFKai-sb;
+  }
