--- a/css/style_MCS.css
+++ b/css/style_MCS.css
@@ -5,6 +5,9 @@
     max-height: 600px;
     width:100%;
 }
+a div, p, .footer_map { transition: all .3s ease-in-out; }
+a div:hover, p:hover { color:gray; transform: scale(1.1); }
+
 #indexSlides_1{
   margin: 0 auto;
   background-image: url("../image/guide_cover.jpg");
@@ -25,7 +28,7 @@
   background-repeat: no-repeat;
 }
 .logo_world_ch{
-  color:white;
+  color:black;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
@@ -33,7 +36,7 @@
   margin-top: 20px;
 }
 .logo_world_en{
-  color:white;
+  color:black;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
@@ -41,7 +44,7 @@
   margin-top: 40px;
 }
 .world_about{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -49,7 +52,7 @@
   margin-top: 27px;
 }
 .world_new{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -57,7 +60,7 @@
   margin-top: 27px;
 }
 .world_guide{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -65,7 +68,7 @@
   margin-top: 27px;
 }
 .world_axchange{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -73,7 +76,7 @@
   margin-top: 27px;
 }
 .world_contact{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -81,7 +84,7 @@
   margin-top: 27px;
 }
 .world_main_ch{
-  color:white;
+  color:black;
   font-weight: bold;
   font-style: italic;
   position:absolute;
@@ -90,7 +93,7 @@
   margin-top: 330px;
 }
 .world_main_en{
-  color:white;
+  color:black;
   font-style: italic;
   position:absolute;
   font-size: 34pt;
@@ -137,6 +140,14 @@
   background-size: 100% 1228px;
   background-repeat:no-repeat;
 }
+.MCS_Pic{
+  margin: 0 auto;
+  background-image: url("../image/mainland.jpg");
+  width: 1080px;
+  height: 1228px;
+  background-size: 1080px 1228px;
+  background-repeat:no-repeat;
+}
 #foother_slides{
   margin: 0 auto;
   background-image: url("../image/footer_bg.jpg");
@@ -146,6 +157,7 @@
   background-repeat:no-repeat;
 }
 .footer_map{
+
   position: absolute;
   background-image: url("../image/footer_pic.jpg");
   margin-left: 215px;
@@ -156,6 +168,10 @@
   background-size: 305px 155px;
   background-repeat:no-repeat;
 }
+.footer_map:hover{
+  margin-top: -10px;
+  transform: scale(1.3);
+}
 .footer_bg_white{
   position: absolute;
   background-image: url("../image/footer_pic2.png");
@@ -165,4 +181,13 @@
   height: 165px;
   background-size: 315px 165px;
   background-repeat:no-repeat;
+}
+
+.footer_label{
+  color:white;
+  position:absolute;
+  font-size: 13pt;
+  margin-left: 595px;
+  margin-top: 17.5px;
+  font-family:DFKai-sb;
 }
