--- a/css/style_OCS.css
+++ b/css/style_OCS.css
@@ -1,4 +1,8 @@
-
+a div{
+  color:black;
+}
+a div, p { transition: all .5s ease-in-out; }
+a div:hover, p:hover {color:black; transform: scale(1.2); font-weight: bold;}
 .container{
   margin: 0 auto;
     max-width: 1280px;
@@ -37,7 +41,7 @@
   background-repeat: no-repeat;
 }
 .logo_world_ch{
-  color:white;
+  color:gray;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
@@ -45,7 +49,7 @@
   margin-top: 20px;
 }
 .logo_world_en{
-  color:white;
+  color:gray;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
@@ -53,7 +57,7 @@
   margin-top: 40px;
 }
 .world_about{
-  color:white;
+  color:gray;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -61,7 +65,7 @@
   margin-top: 27px;
 }
 .world_new{
-  color:white;
+  color:gray;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -69,7 +73,7 @@
   margin-top: 27px;
 }
 .world_guide{
-  color:white;
+  color:gray;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -77,7 +81,7 @@
   margin-top: 27px;
 }
 .world_axchange{
-  color:white;
+  color:gray;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -85,7 +89,7 @@
   margin-top: 27px;
 }
 .world_contact{
-  color:white;
+  color:gray;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -93,21 +97,38 @@
   margin-top: 27px;
 }
 .world_main_ch{
-  color:white;
-  font-weight: bold;
+  z-index: 5;
+  color:black;
   font-style: italic;
   position:absolute;
-  font-size: 34pt;
-  margin-left: 240px;
+  font-size: 60pt;
+  margin-left: 469px;
   margin-top: 330px;
 }
+.world_main_ch_p{
+  color:gray;
+  font-style: italic;
+  position:absolute;
+  font-size: 60pt;
+  margin-left: 468px;
+  margin-top: 328px;
+}
 .world_main_en{
-  color:white;
+  z-index: 5;
+  color:black;
   font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 120px;
-  margin-top: 400px;
+  margin-left: 550px;
+  margin-top: 451px;
+}
+.world_main_en_p{
+  color:gray;
+  font-style: italic;
+  position:absolute;
+  font-size: 34pt;
+  margin-left: 549px;
+  margin-top: 450px;
 }
 #indexSlides_2{
   margin: 0 auto;
@@ -489,7 +510,7 @@ box-shadow: 0 9px #999;
   background-repeat:no-repeat;
 }
 
-.footer_bg_white{
+.footer_bg_gray{
   position: absolute;
   background-image: url("../image/footer_pic2.png");
   margin-left: 210px;
@@ -501,7 +522,7 @@ box-shadow: 0 9px #999;
 }
 
 .footer_label{
-  color:white;
+  color:gray;
   position:absolute;
   font-size: 13pt;
   margin-left: 595px;
