--- a/css/style_news.css
+++ b/css/style_news.css
@@ -1,10 +1,17 @@
-
+a div, p { transition: all .3s ease-in-out; }
+a div:hover, p:hover { color:#333333; transform: scale(1.1); }
+.footer_map:hover,.img_1:hover,.img_2:hover,.img_3:hover,.img_4:hover { z-index: 3;transform: scale(1.5);}
 .container{
   margin: 0 auto;
     max-width: 1280px;
     max-height: 600px;
     width:100%;
 }
+
+.img_1, .img_2, .img_3, .img_4 {
+  transition: all .5s ease-in-out;
+}
+
 .container_large{
   margin: 0 auto;
     max-width: 1280px;
@@ -89,18 +96,16 @@
 .world_main_ch{
   color:white;
   font-weight: bold;
-  font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 240px;
+  margin-left: 470px;
   margin-top: 330px;
 }
 .world_main_en{
   color:white;
-  font-style: italic;
   position:absolute;
-  font-size: 34pt;
-  margin-left: 120px;
+  font-size: 14pt;
+  margin-left: 500px;
   margin-top: 400px;
 }
 #indexSlides_2{
@@ -162,6 +167,11 @@
   width: 985px;
   background-repeat:no-repeat;
 }
+.text_1, .text_2, .text_3, .text_4, .text_5 { transition: all .6s ease-in-out; }
+.text_1:hover, .text_2:hover, .text_3:hover, .text_4:hover, .text_5:hover{
+  opacity: 0.7;
+background-color: white;
+  color:black; transform: scale(1.1); }
 .border_1{
     margin-top: 107px;
     margin-left: 622px;
@@ -184,6 +194,7 @@
   margin-left: 632px;
   font-weight: bold;
   font-size: 14pt;
+  width: 488px;
   position: absolute;
   color:#F0F8FF ;
 }
@@ -192,6 +203,7 @@
   margin-left: 632px;
   font-weight: bold;
   font-size: 14pt;
+  width: 488px;
   position: absolute;
   color:#F0F8FF ;
 }
@@ -200,6 +212,8 @@
   margin-left: 632px;
   font-weight: bold;
   font-size: 14pt;
+  width: 488px;
+
   position: absolute;
   color:#F0F8FF ;
 }
@@ -208,6 +222,8 @@
   margin-left: 632px;
   font-weight: bold;
   font-size: 14pt;
+  width: 488px;
+
   position: absolute;
   color:#F0F8FF ;
 }
@@ -345,4 +361,53 @@
   height: 165px;
   background-size: 315px 165px;
   background-repeat:no-repeat;
+}
+#foother_slides{
+  margin: 0 auto;
+  background-image: url("../image/footer_bg.jpg");
+  width: 100%;
+  height: 200px;
+  background-size: 100% 200px;
+  background-repeat:no-repeat;
+}
+.footer_map{
+  position: absolute;
+  background-image: url("../image/footer_pic.jpg");
+  margin-left: 215px;
+  margin-top: 22.5px;
+  z-index: 3;
+  width: 305px;
+  height: 155px;
+  background-size: 305px 155px;
+  background-repeat:no-repeat;
+}
+.footer_bg_black{
+  position: absolute;
+  background-image: url("../image/footer_pic2.png");
+  margin-left: 210px;
+  margin-top: 17.5px;
+  width: 315px;
+  height: 165px;
+  background-size: 315px 165px;
+  background-repeat:no-repeat;
+}
+
+.footer_bg_white{
+  position: absolute;
+  background-image: url("../image/footer_pic2.png");
+  margin-left: 210px;
+  margin-top: 17.5px;
+  width: 315px;
+  height: 165px;
+  background-size: 315px 165px;
+  background-repeat:no-repeat;
+}
+
+.footer_label{
+  color:white;
+  position:absolute;
+  font-size: 13pt;
+  margin-left: 595px;
+  margin-top: 17.5px;
+  font-family:DFKai-sb;
 }
